# eicr-anonymization

./: .env  README.md  main.py  pyproject.toml
.github/workflows/: release-build.yaml  run-tests.yaml
src/: DataCache.py  main.py
src/data_cache/: main.py
src/eicr_anonymization/: __main__.py  anonymize_eicr.py  data_cache.py
src/eicr_anonymization/star-wars-data/: country_names.yaml  family_names.yaml  given_names.yaml  name_prefixes.yaml  name_suffixes.yaml  numeric_street_names.yaml
src/eicr_anonymization/tags/: Tag.py
src/equality/: main.py
src/random_sw/: main.py
src/random_sw/data/: city_names.yaml  country_names.yaml  county_names.yaml  family_names.yaml  given_names.yaml  name_prefixes.yaml  name_suffixes.yaml  numeric_street_names.yaml  state_names.yaml  street_names.yaml  street_types.yaml
src/star-wars-data/: city_names.yaml  county_names.yaml  family_names.yaml  given_names.yaml  state_names.yaml  street_names.yaml  street_types.yaml
src/tags/: Tag.py
tests/: test_base_tag.py  test_data_cache.py  test_normalization.py  test_random_sw.py  test_tag.py  test_tags.py
