[project]
name = "eicr-anonymization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "usaddress>=0.5.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = [
  "S",    # Bandit
  "B",    # Bugbear
  "C4",   # flake8-comprehensions
  "LOG",  # flake8-logging
  "G",    # flake8-logging-format
  "PT",   # flake8-pytest-style
  "B",    # flake8-bugbear
  "F",    # Pyflakes
  "E",    # Pydocstyle errors
  "W",    # Pydocstyle warnings
  "D",    # Pydocstyle
  "I",    # isort
  "UP",   # pyupgrade
  "SIM",  # flake8-simplify
  "PL",   # Pylint
  "FURB", # refurb
  "RUF",  # Ruff
  "C90",  # mccabe
]
ignore= [
  "S311" # suspicious-non-cryptographic-random-usage
  ]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101" # assert
]

[tool.ruff.format]

