[project]
name = "eicr-anonymization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.12.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "usaddress>=0.5.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = [
  "B",    # Bugbear
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "D",    # Pydocstyle
  "E",    # Pydocstyle errors
  "F",    # Pyflakes
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "LOG",  # flake8-logging
  "PL",   # Pylint
  "PT",   # flake8-pytest-style
  "RUF",  # Ruff
  "S",    # Bandit
  "SIM",  # flake8-simplify
  "UP",   # pyupgrade
  "W",    # Pydocstyle warnings
]
ignore= [
  "S311" # suspicious-non-cryptographic-random-usage
  ]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "S101" # assert
]
